--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==1.0.3
 Werkzeug==0.10.4
+argparse==1.2.1
 blinker==1.3
 itsdangerous==0.24
+poster==0.8.1
+psycopg2==2.6.2
+requests==2.11.0
 wsgiref==0.1.2
-psycopg2
