--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,15 @@ WTForms==1.0.5
 Werkzeug==0.10.4
 alembic==0.6.2
 argparse==1.2.1
+bcrypt==3.1.2
 bleach==1.4
 blinker==1.3
+cffi==1.9.1
 html5lib==1.0b3
 itsdangerous==0.23
 passlib==1.7.0
 psycopg2==2.6.2
+pycparser==2.17
 requests==2.12.4
 six==1.4.1
 wsgiref==0.1.2
