Cleaned up Git and Githhub
Tried to push changes to github and realized that absolutely everything had
changed about this project. Created two branches on github to freeze the
project as it was at graduation and as it was before converting it into a
large app and overhauling the model. Development will now be done in V2 until
deployment on Heroku and then will be merged into master.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ secrets.sh
 .DS_Store
 create_friends_profile_form.html
 user_profile_junk_code.html
+thoughts.md
 
-
-#File for adding here document git commit messages
+#File for adding document git commit messages
 message.txt
-
