--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,50 @@
-Flask==0.10.1
-Flask-Bootstrap==3.0.3.1
-Flask-HTTPAuth==2.7.0
-Flask-Login==0.3.1
-Flask-Mail==0.9.0
-Flask-Migrate==1.1.0
-Flask-Moment==0.2.1
-Flask-PageDown==0.1.4
-Flask-SQLAlchemy==1.0
-Flask-Script==0.6.6
-Flask-WTF==0.9.4
-Jinja2==2.7.1
-Mako==0.9.1
-Markdown==2.3.1
-MarkupSafe==0.18
-SQLAlchemy==0.9.9
-WTForms==1.0.5
-Werkzeug==0.10.4
-alembic==0.6.2
-argparse==1.2.1
+alembic==0.8.10
+appdirs==1.4.0
+backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.2
-bleach==1.4
-blinker==1.3
+bleach==1.5.0
+blinker==1.4
 cffi==1.9.1
-html5lib==1.0b3
-itsdangerous==0.23
-passlib==1.7.0
+click==6.7
+decorator==4.0.11
+dominate==2.3.1
+enum34==1.1.6
+Flask==0.12
+Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.2.2
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
+Flask-Migrate==2.0.3
+Flask-Moment==0.5.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.14.2
+html5lib==0.9999999
+ipython==5.2.2
+ipython-genutils==0.1.0
+itsdangerous==0.24
+Jinja2==2.9.5
+Mako==1.0.6
+MarkupSafe==0.23
+packaging==16.8
+passlib==1.7.1
+pathlib2==2.2.1
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.13
 psycopg2==2.6.2
+ptyprocess==0.5.1
 pycparser==2.17
-requests==2.12.4
-six==1.4.1
-wsgiref==0.1.2
+Pygments==2.2.0
+pyparsing==2.1.10
+python-editor==1.0.3
+requests==2.13.0
+scandir==1.5
+simplegeneric==0.8.1
+six==1.10.0
+SQLAlchemy==1.1.5
+traitlets==4.3.1
+visitor==0.1.3
+wcwidth==0.1.7
+Werkzeug==0.11.15
+WTForms==2.1
