--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pycparser==2.17
 Pygments==2.2.0
 pyparsing==2.1.10
 python-editor==1.0.3
+pytz==2016.10
 requests==2.13.0
 scandir==1.5
 simplegeneric==0.8.1
