--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
+acme==0.12.0
 alembic==0.8.10
 appdirs==1.4.0
+asn1crypto==0.22.0
 backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.2
 bleach==1.5.0
 blinker==1.4
 cffi==1.9.1
 click==6.7
+ConfigArgParse==0.11.0
+configobj==5.0.6
+cryptography==1.8.1
 decorator==4.0.11
 dominate==2.3.1
 enum34==1.1.6
 Flask==0.12
 Flask-Bootstrap==3.3.7.1
 Flask-HTTPAuth==3.2.2
+Flask-JSGlue==0.3.1
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.3
@@ -19,16 +25,26 @@ Flask-Moment==0.5.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
+funcsigs==1.0.2
+future==0.16.0
+gunicorn==19.7.0
 html5lib==0.9999999
+idna==2.5
+infinity==1.4
+intervals==0.8.0
+ipaddress==1.0.18
 ipython==5.2.2
 ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.9.5
 Mako==1.0.6
 MarkupSafe==0.23
+mock==2.0.0
 packaging==16.8
+parsedatetime==2.3
 passlib==1.7.1
 pathlib2==2.2.1
+pbr==2.0.0
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.13
@@ -36,16 +52,24 @@ psycopg2==2.6.2
 ptyprocess==0.5.1
 pycparser==2.17
 Pygments==2.2.0
+pyOpenSSL==16.2.0
 pyparsing==2.1.10
+pyRFC3339==1.0
 python-editor==1.0.3
 pytz==2016.10
 requests==2.13.0
 scandir==1.5
 simplegeneric==0.8.1
+simplejson==3.11.1
 six==1.10.0
 SQLAlchemy==1.1.5
 traitlets==4.3.1
+validators==0.11.3
 visitor==0.1.3
 wcwidth==0.1.7
 Werkzeug==0.11.15
 WTForms==2.1
+WTForms-Components==0.10.3
+zope.component==4.3.0
+zope.event==4.2.0
+zope.interface==4.3.3
