--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Flask-Migrate==2.0.3
 Flask-Moment==0.5.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+Flask-SSLify==0.1.5
 Flask-WTF==0.14.2
 funcsigs==1.0.2
 future==0.16.0
