--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ decorator==4.0.11
 dominate==2.3.1
 enum34==1.1.6
 Flask==0.12
+Flask-Assets==0.12
 Flask-Bootstrap==3.3.7.1
 Flask-HTTPAuth==3.2.2
 Flask-JSGlue==0.3.1
@@ -28,7 +29,6 @@ Flask-SSLify==0.1.5
 Flask-WTF==0.14.2
 funcsigs==1.0.2
 future==0.16.0
-gunicorn==19.7.0
 html5lib==0.9999999
 idna==2.5
 infinity==1.4
@@ -38,6 +38,7 @@ ipython==5.2.2
 ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.9.5
+jsmin==2.2.2
 Mako==1.0.6
 MarkupSafe==0.23
 mock==2.0.0
@@ -68,6 +69,7 @@ traitlets==4.3.1
 validators==0.11.3
 visitor==0.1.3
 wcwidth==0.1.7
+webassets==0.12.1
 Werkzeug==0.11.15
 WTForms==2.1
 WTForms-Components==0.10.3
